fixed side bar showing up on mobile in education section

--- a/style.css
+++ b/style.css
@@ -283,7 +283,8 @@ nav a,
 }
 
 #education img {
-    width: 20em; 
+    max-width: 20em; 
+    width: 100%;
     height: 400px;
 }
 
@@ -304,7 +305,8 @@ nav a,
     }
 
     #education .intro p {
-        width: 500px;
+        max-width: 500px;
+        width: 100%;
     }
     #education {
         display: block;
